--- a/templates/base.html
+++ b/templates/base.html
@@ -23,29 +23,19 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Cookbook</a>
+        <a href="{{ url_for('index') }}" class="brand-logo">Cookbook</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"
           ><i class="material-icons">menu</i></a
         >
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li>
             <a href="{{ url_for('index') }}" class="navbar-item">
-              Home
-            </a>
-          </li>
-          <li>
-            <a href="{{ url_for('profile') }}" class="navbar-item">
-              Profile
+              About The Cookbook
             </a>
           </li>
           <li>
             <a href="{{ url_for('login') }}" class="navbar-item">
               Login
-            </a>
-          </li>
-          <li>
-            <a href="{{ url_for('signup') }}" class="navbar-item">
-              Sign Up
             </a>
           </li>
           <li>
