--- a/templates/index.html
+++ b/templates/index.html
@@ -4,128 +4,138 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> -->
-	<link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 	<title>Cooking Book</title>
 </head>
 
 <body>
-      <nav>
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Cookbook</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="{{ url_for('index') }}" class="navbar-item">
-									About
-								</a></li>
-        <li><a href="{{ url_for('login') }}" class="navbar-item">
-									Login
-								</a></li>
-        <li><a href="{{ url_for('signup') }}" class="navbar-item">
-									Sign Up
-								</a></li>
-      </ul>
-    </div>
-  </nav>
+	<nav class="deep-orange darken-4">
+		<div class="nav-wrapper">
+			<a href="" class="brand-logo">Cookbook</a>
+			<a href="{{ url_for('index') }}" data-target="mobile-demo"
+				class="sidenav-trigger"><i class="material-icons">menu</i></a>
+			<ul class="right hide-on-med-and-down">
+				<li><a href="{{ url_for('index') }}" class="navbar-item">
+						About
+					</a></li>
+				<li><a href="{{ url_for('login') }}" class="navbar-item">
+						Login
+					</a></li>
+				<li><a href="{{ url_for('signup') }}" class="navbar-item">
+						Sign Up
+					</a></li>
+			</ul>
+		</div>
+	</nav>
 
-  <ul class="sidenav" id="mobile-demo"><li><a href="{{ url_for('index') }}"" class="navbar-item">
-									About
-								</a></li>
-        <li><a href="{{ url_for('login') }}" class="navbar-item">
-									Login
-								</a></li>
-        <li><a href="{{ url_for('signup') }}" class="navbar-item">
-									Sign Up
-								</a></li>
-  </ul>
-								
-  <header class="masthead text-white text-center">
-    <div class="overlay"></div>
+	<ul class="sidenav" id="mobile-demo">
+		<li><a href="{{ url_for('index') }}" class="navbar-item">
+				About
+			</a></li>
+		<li><a href="{{ url_for('login') }}" class="navbar-item">
+				Login
+			</a></li>
+		<li><a href="{{ url_for('signup') }}" class="navbar-item">
+				Sign Up
+			</a></li>
+	</ul>
+
+	<header>
     <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Build a landing page for your business or project and generate more leads!</h1>
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <img class="wrap-it-up" src="{{url_for('static', filename='images/spaghetti.jpg')}}">
+          <span class="card-title">
+          Find how to cook an easy meal for friends and family or upload your own recipe!</span>
         </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
+        <div class="card-action">
+        <a href="{{ url_for('signup') }}" class="waves-effect waves-light btn amber orange darken-3"><i class="material-icons right">forum</i>sign up</a>  	
+								or <a href="{{ url_for('login') }}" class="orange-text darken-3 text-darken-3">Login</a>
         </div>
       </div>
     </div>
-  </header>
-<div class="col s12 m8 offset-m2 l6 offset-l3">
-        <div class="card-panel grey lighten-5 z-depth-1">
-          <div class="row valign-wrapper">
-            <div class="col s7">
-              <img src="{{url_for('static', filename='images/nin.png')}}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
-            </div>
-            <div class="col s5">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
-              </span>
-            </div>
-            <div class="col s7">
-              <img src="{{url_for('static', filename='images/bikove.png')}}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
-            </div>
-            <div class="col s5">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
-              </span>
-            </div>
-            <div class="col s7">
-              <img src="{{url_for('static', filename='images/nao.png')}}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
-            </div>
-            <div class="col s5">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
-              </span>
-            </div>
-            <div class="col 7">
-              <img src="{{url_for('static', filename='images/1.png')}}" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
-            </div>
-            <div class="col s5">
-              <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
-              </span>
-            </div>
-          </div>
-          
-        </div>
-      </div>
+  </div>
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-9 mx-auto">
+					<h3 class="mb-5"></h3>
+				</div>
+				<div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+					<form>
 
-  
-{% block content %}
-<h1 class="title">
-</h1>
-<h2 class="subtitle">
-</h2>
-{% endblock %}
+								
+					</form>
+				</div>
+			</div>
+		</div>
+	</header>
+	<div class="container">
+		<div class="card medium">
+			<div class="card-image waves-effect waves-block waves-light">
+				<img class="activator wrap-it-up" src="{{url_for('static', filename='images/mish.jpg')}}"  alt="mish mash">
+    </div>
+				<div class="card-content">
+					<span class="card-title activator grey-text text-darken-4"><strong>Mish Mash</strong></span>
+                        <a class="activator waves-effect waves-light btn btn-medium green">Explore</a><br>
+                        <i class="material-icons right"></i>
+
+				</div>
+				<div class="card-reveal">
+					<span class="card-title grey-text text-darken-4">Mish Mash<i class="material-icons right">close</i></span>
+					<p><strong><h6>Delicious treat from the 
+                        East of the Medeterinian. Legend has it is an original Bulgarian recipe.</h6></strong></p>
+                    <a href="{{ url_for('login') }}" class="activator waves-effect waves-light btn btn-medium green">Login and find more</a>
+
+				</div>
+			</div>
+		</div>
+
+		{% block content %}
+		<h1 class="title">
+		</h1>
+		<h2 class="subtitle">
+		</h2>
+		{% endblock %}
 
 		<!-- /.row -->
 
-	<!-- /.container -->
-	<!-- Footer here-->
-	<footer>
 		<!-- /.container -->
-	</footer>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="{{url_for('static', filename='ninja.js')}}"></script>
-    <script src="{{url_for('static', filename='forms.js')}}"></script>
+		<!-- Footer here-->
+		
+        <footer class="page-footer green lighten-5">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="green-text text-darken-4">Contact</h5>
+                <p class="green-text text-darken-4">You can get in touch with the creator of this website the link in the right-hand side.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="green-text text-darken-4">Links</h5>
+                <ul>
+                  <li><a class="green-text text-darken-4" href="#!">Link 1</a></li>
+                  <li><a class="green-text text-darken-4" href="#!">Link 2</a></li>
+                  <li><a class="green-text text-darken-4" href="#!">Link 3</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright green darken-4">
+            <div class="container">
+            © 2020 Copyright PodvisTorcheto
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
+            
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		<script src="{{url_for('static', filename='ninja.js')}}"></script>
+		<script src="{{url_for('static', filename='forms.js')}}"></script>
 </body>
 
 </html>
