--- a/templates/meals.html
+++ b/templates/meals.html
@@ -8,7 +8,7 @@
             <div>
 			<div class="col s9">
 				<strong>{{recipe.name}} - {{recipe.time_to_prepare}}</strong>
-                <img src={{recipe.image}}>
+                <img src="{{recipe.image}}">
 			</div>
 			<div class="col s2">
             <div class="inline_actions">
