--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
     <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
-          <img class="wrap-it-up" src="{{url_for('static', filename='images/spaghetti.jpg')}}">
+          <img class="wrap-it-up" src="{{url_for('static', filename='images/brown-wood.jpg')}}">
           <span class="card-title">
           Find how to cook an easy meal for friends and family or upload your own recipe!</span>
         </div>
