--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h4>Login Successfull</h4>
+<h4>Login Successfull</h4><br>
+<h4>Check the recipes and upload new one from the upper right of the screen</h4>
 <div>Not you? <a href="{{ url_for('logout') }}"><strong>Log out here</strong></a>
         </div>
 {% endblock %}
