--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,23 +1,88 @@
-{% extends "base.html" %}
-
-{% block content %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Flask Auth</title>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='css/style.css')}}"
+      type="text/css"
+    />
+  </head>
+  <body>
+  <nav class="deep-orange darken-4">
+      <div class="nav-wrapper">
+        <a href="{{ url_for('index') }}" class="brand-logo">Cookbook</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li>
+            <a href="{{ url_for('index') }}" class="navbar-item">
+              About The Cookbook
+            </a>
+          </li>
+          <li>
+            <a href="{{ url_for('signup') }}" class="navbar-item">
+              Recipes
+            </a>
+          </li> 
+          
+          
+        </ul>
+      </div>
+    </nav>
+    <ul class="sidenav" id="mobile-demo">
+      <li>
+        <a href="{{ url_for('index') }}" class="navbar-item">
+          Home
+        </a>
+      </li>
+      <li>
+        <a href="{{ url_for('signup') }}" class="navbar-item">
+          Sign Up
+        </a>
+      </li>
+    </ul>
+<div class="container">
 <div class="column is-4 is-offset-4">
     <h3 class="title">Sign Up</h3>
     <div class="box">
         <form onclick="validate()" action="{{ url_for('signup') }}" method="POST">
-            <div class="field">
-                <div class="control">
-                    <input id="email" required class="materialize-textarea input is-large form-control validate" type="email" name="email" placeholder="Email" autofocus="">
-                </div>
+            <div class="input-">
+                    <input id="email" required class="materialize-textarea input is-large form-control validate" type="email" name="email" placeholder="use email" autofocus="">
             </div>
+
             <div class="field">
                 <div class="control">
-                    <input  id="password" required class="materialize-textarea input is-large form-control validate" type="password" name="password" placeholder="Password">
+                    <input id="password" required class="materialize-textarea input is-large form-control validate" type="password" name="password" placeholder="create password">
                 </div>
             </div>
 
-            <button class="button is-block is-info is-large is-fullwidth" type="submit">Register</button>
+            <button class="btn waves-effect waves-light  deep-orange darken-4 is-block is-info is-large is-fullwidth" type="submit">Register</button>
         </form>
     </div>
 </div>
-{% endblock %}
+</div>
+<div class="hero-body">
+        <div class="container has-text-centered">
+          {% block content %} {% endblock %}
+        </div>
+      </div>
+      
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{url_for('static', filename='ninja.js')}}"></script>
+    <script src="{{url_for('static', filename='forms.js')}}"></script>
+  </body>
+</html>
