--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@
     margin-top: 5px;
 }
 
-.card .card-reveal {
+.photo-except {
     background-image: url(/static/images/mish.jpg);
 }
 
@@ -27,7 +27,9 @@
     height: 280px;
 }
 
-/*.card.small .card-image, .card.medium .card-image, .card.large .card-image {max-height: 80%;} */
+.card.small .card-image, .card.medium .card-image, .card.large .card-image {max-height: 80%;}
+
+
 
 nav .brand-logo {
     padding-left: 10px;
@@ -39,4 +41,9 @@ nav .brand-logo {
 
 .box {
     width: 26%;
+}
+
+.card .card-content {
+    padding: 0px;
+    padding-left: 10px;
 }
