--- a/templates/index.html
+++ b/templates/index.html
@@ -82,10 +82,8 @@
 				<div class="card-content">
 					<span class="card-title activator grey-text text-darken-4"><strong>Mish Mash</strong></span>
                         <a class="activator waves-effect waves-light btn btn-medium green">Explore</a><br>
-                        <i class="material-icons right"></i>
-
 				</div>
-				<div class="card-reveal">
+				<div class="card-reveal photo-except">
 					<span class="card-title grey-text text-darken-4">Mish Mash<i class="material-icons right">close</i></span>
 					<p><strong><h6>Delicious treat from the 
                         East of the Medeterinian. Legend has it is an original Bulgarian recipe.</h6></strong></p>
