--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,3 @@
-/* .display-3 {
-    font-size: 2rem;
-    font-weight: 300;
-    line-height: 0;
-} */
-
 .btn-small {
     height: 24px;
     line-height: 24px;
@@ -39,11 +33,11 @@ nav .brand-logo {
     padding-top: 10px;
 }
 
-.box {
-    width: 26%;
-}
-
 .card .card-content {
     padding: 0px;
     padding-left: 10px;
+}
+
+#text-up {
+    padding: 160px; 
 }
