--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
@@ -49,7 +50,7 @@
       <div class="card">
         <div class="card-image">
           <img class="wrap-it-up" src="{{url_for('static', filename='images/brown-wood.jpg')}}">
-          <span class="card-title">
+          <span class="card-title" id="text-up">
           Find how to cook an easy meal for friends and family or upload your own recipe!</span>
         </div>
         <div class="card-action">
@@ -66,10 +67,6 @@
 					<h3 class="mb-5"></h3>
 				</div>
 				<div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-					<form>
-
-								
-					</form>
 				</div>
 			</div>
 		</div>
@@ -84,7 +81,7 @@
                         <a class="activator waves-effect waves-light btn btn-medium green">Explore</a><br>
 				</div>
 				<div class="card-reveal photo-except">
-					<span class="card-title grey-text text-darken-4">Mish Mash<i class="material-icons right">close</i></span>
+					<span class="card-title grey-text text-darken-4">Mish Mash<i class="material-icons right">facebook</i></span>
 					<p><strong><h6>Delicious treat from the 
                         East of the Medeterinian. Legend has it is an original Bulgarian recipe.</h6></strong></p>
                     <a href="{{ url_for('login') }}" class="activator waves-effect waves-light btn btn-medium green">Login and find more</a>
@@ -105,27 +102,27 @@
 		<!-- /.container -->
 		<!-- Footer here-->
 		
-        <footer class="page-footer green lighten-5">
+        <footer class="page-footer deep-orange lighten-5">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="green-text text-darken-4">Contact</h5>
-                <p class="green-text text-darken-4">You can get in touch with the creator of this website the link in the right-hand side.</p>
+                <h5 class="grey-text text-darken-3">Contact</h5>
+                <p class="grey-text text-darken-4">You can get in touch with the creator of this website the link in the right-hand side.</p>
               </div>
               <div class="col l4 offset-l2 s12">
-                <h5 class="green-text text-darken-4">Links</h5>
+                <h5 class="grey-text text-darken-4">Links</h5>
                 <ul>
-                  <li><a class="green-text text-darken-4" href="#!">Link 1</a></li>
-                  <li><a class="green-text text-darken-4" href="#!">Link 2</a></li>
-                  <li><a class="green-text text-darken-4" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-darken-4 fa fa-instagram" href="instagram.com"></a></li>
+                  <li><a class="grey-text text-darken-4 fa fa-linkedin" href="#!"></a></li>
+                  <li><a class="grey-text text-darken-4 fa fa-facebook" href="#!"></a></li>
                 </ul>
               </div>
             </div>
           </div>
-          <div class="footer-copyright green darken-4">
+          <div class="footer-copyright deep-orange darken-4">
             <div class="container">
-            © 2020 Copyright PodvisTorcheto
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            © 2020 PodvisTorcheto
+            <a onclick="topFunction()" class="grey-text text-lighten-4 right waves-effect waves-light btn deep-orange darken-1" id="myButton" title="Go to top">back to top</a>
             </div>
           </div>
         </footer>
