--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -10,9 +10,9 @@
     </div>
 				<div class="card-content">
 					<span class="card-title activator grey-text text-darken-4">{{recipe.name}}<i class="material-icons right">more_vert</i></span>
-					<p><a href="{{url_for('review_meals', meal_id=recipe._id)}}"
+					<p><a class="activator waves-effect waves-light btn btn-small red">Expand</a>
+                    <a href="{{url_for('review_meals', meal_id=recipe._id)}}"
 							class="waves-effect waves-light btn btn-small red">Rate</a>
-						<a class="activator waves-effect waves-light btn btn-small red">View</a>
 						<a href="{{url_for('delete_recipe', meal_id=recipe._id)}}"
 							class="waves-effect waves-light btn btn-small">Delete</a>
 
