about page wired

--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
   <body>
     <nav class="deep-orange darken-4">
       <div class="nav-wrapper">
-        <a href="{{ url_for('index') }}" class="brand-logo">The Cookbook</a>
+        <a href="{{ url_for('index') }}" class="brand-logo">Cookbook</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"
           ><i class="material-icons">menu</i></a
         >
