--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 			<a href="{{ url_for('index') }}" data-target="mobile-demo"
 				class="sidenav-trigger"><i class="material-icons">menu</i></a>
 			<ul class="right hide-on-med-and-down">
-				<li><a href="{{ url_for('index') }}" class="navbar-item">
+				<li><a href="{{ url_for('about_page') }}" class="navbar-item">
 						About
 					</a></li>
 				<li><a href="{{ url_for('login') }}" class="navbar-item">
@@ -33,7 +33,7 @@
 	</nav>
 
 	<ul class="sidenav" id="mobile-demo">
-		<li><a href="{{ url_for('index') }}" class="navbar-item">
+		<li><a href="{{ url_for('about_page') }}" class="navbar-item">
 				About
 			</a></li>
 		<li><a href="{{ url_for('login') }}" class="navbar-item">
