--- a/templates/login.html
+++ b/templates/login.html
@@ -29,13 +29,13 @@
         >
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li>
-            <a href="{{ url_for('index') }}" class="navbar-item">
-              About The Cookbook
+            <a href="{{ url_for('about_page') }}" class="navbar-item">
+              About
             </a>
           </li>
           <li>
             <a href="{{ url_for('signup') }}" class="navbar-item">
-              Recipes
+                Sign Up
             </a>
           </li> 
           
@@ -45,8 +45,8 @@
     </nav>
     <ul class="sidenav" id="mobile-demo">
       <li>
-        <a href="{{ url_for('index') }}" class="navbar-item">
-          Home
+        <a href="{{ url_for('about_page') }}" class="navbar-item">
+          About
         </a>
       </li>
       <li>
