--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -18,15 +18,20 @@
 
 					</p>
 				</div>
-				<div class="card-reveal">
+				<div class="card-reveal photo-except">
 					<span class="card-title grey-text text-darken-4">{{recipe.name}}<i class="material-icons right">close</i></span>
 					<p><strong>Culinary Region: </strong>{{recipe.culinary_region}}</p>
 					<p><strong>Time to prepare: </strong>{{recipe.time_to_prepare}}</p>
 					<p><strong>Ingredients: </strong>{{recipe.ingredients}}</p>
                     <p>	<strong>How to prepare and cook: </strong>{{recipe.cooking}}</p>
-					<p><strong>Date of upload: </strong>{{recipe.upload_date}}</p>
-					<p><strong>The user who uploded the recipe actually cooked it: </strong>{{recipe.cooked_meal}}</p>
-				</div>
+					<p><strong>Date of upload: </strong>{{recipe['upload-date']}}</p>
+					<p>
+                    {% if recipe.cooked_meal %}
+                    <strong>The user who uploded this recipe actually cooked it: </strong>True</p>
+                    {% else %}
+                    <p><strong>The user who uploded this recipe actually cooked it: </strong>True</p>
+                    {% endif %}
+                </div>
 			</div>
 	</li>
 </ul>
