--- a/templates/share_recipe.html
+++ b/templates/share_recipe.html
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="input-field  col s12"><i class="material-icons prefix">explore</i>
 				<textarea id="culinary_region" name="culinary_region" type="text" required class="materialize-textarea form-control validate"></textarea>
-				<label>Culinary Region or Country of Origin (e.g. Medetterenian or Italy) </label>
+				<label>Culinary region or country of origin (e.g. Mediterranean or Italy) </label>
 			</div>
 		</div>
 
@@ -29,14 +29,14 @@
 			<div class="input-field col s12">
 				<i class="material-icons prefix">map</i>
 				<textarea id="ingredients" name="ingredients" type="text" required class="materialize-textarea form-control validate"></textarea>
-				<label for="icon_prefix">Ingredients and Spice</label>
+				<label for="icon_prefix">Ingredients and spices</label>
 			</div>
 		</div>
 		<div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">edit</i>
 				<textarea id="cooking" name="cooking" type="text" required class="materialize-textarea form-control validate"></textarea>
-				<label for="icon_prefix">How to prepeare and cook it?</label>
+				<label for="icon_prefix">How to prepeare and cook it? (e.g. step 1: do this, step 2: do that)</label>
 			</div>
                         <div class="input-field col s12"><i class="material-icons prefix">airplay</i><br><br>
             <label>Upload Photo</label>
